updated config to local; tested as working

--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
     "password": "JD@mbpsql5494",
     "database": "smothii_db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
     "logging": false
   },
   "production": {
